--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@
 }
 .TabMenu{
   display: flex;
-  padding: 3em;
+  padding: 3rem;
+  
 }
 .TabMenu div{
   flex-grow: 1;
@@ -49,11 +50,11 @@
   justify-content: center;
   align-items: center;
   color: #8E8E8E;
-  background: rgba(221, 221, 221, 0.5)
+  background: rgba(221, 221, 221, 0.5);
 }
-.TabMenu div:nth-child(1){
+/*.TabMenu div:nth-child(1){
   background: #FFFFFF;
   border-top: 2px solid #8CDC52;
   color:#8CDC52;
   box-shadow: 0px 3px 3px rgba(0,0,0,.3)
-}
+}*/
