--- a/src/App.css
+++ b/src/App.css
@@ -1,60 +1,29 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ background: rgba(221, 221, 221, 0.5);
+  padding: 3rem 10rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .TabMenu{
-  display: flex;
-  padding: 3rem;
-  
-}
-.TabMenu div{
-  flex-grow: 1;
+
+
+
+
+flex-grow: 1;
   border:1px solid rgba(0,0,0,.05);
   padding: 3rem;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+ flex-direction: column;
   color: #8E8E8E;
-  background: rgba(221, 221, 221, 0.5);
+  background: white;
+  box-sizing: border-box;
+  
 }
-/*.TabMenu div:nth-child(1){
+.TabMenu:nth-child(1){
   background: #FFFFFF;
   border-top: 2px solid #8CDC52;
   color:#8CDC52;
   box-shadow: 0px 3px 3px rgba(0,0,0,.3)
-}*/
+}
